k8s-disabled-apps/pihole/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pihole
  labels:
    app: pihole
    environment: playground
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
